jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

DllImport int ECF_Ativar(const INTPTR ecfHandle);

DllImport int ECF_Desativar(const INTPTR ecfHandle);

DllImport int ECF_GetArredonda(const INTPTR ecfHandle);

DllImport int ECF_GetChequePronto(const INTPTR ecfHandle);

DllImport int ECF_GetEmLinha(const INTPTR ecfHandle, const int timeOut);

DllImport int ECF_GetEstado(const INTPTR ecfHandle);

DllImport int ECF_GetGavetaAberta(const INTPTR ecfHandle);

DllImport int ECF_GetHorarioVerao(const INTPTR ecfHandle);

DllImport int ECF_GetIdentificaConsumidorRodape(const INTPTR ecfHandle);

DllImport int ECF_GetMFAdicional(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetMFD(const INTPTR ecfHandle);

DllImport int ECF_GetNumUltItem(const INTPTR ecfHandle);

DllImport int ECF_GetPoucoPapel(const INTPTR ecfHandle);

DllImport int ECF_GetSubTotal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTermica(const INTPTR ecfHandle);

DllImport int ECF_GetTotalIsencaoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoFiscal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalPago(const INTPTR ecfHandle, double* value);

DllImport int ECF_PreparaTEF(const INTPTR ecfHandle);

DllImport int ECF_SetAAC(const INTPTR ecfHandle, const INTPTR aacHandle);

DllImport int ECF_SetEAD(const INTPTR ecfHandle, const INTPTR eadHandle);

DllImport int ECF_SetRFD(const INTPTR ecfHandle, const INTPTR rfdHandle);

DllImport int ECF_TestaPodeAbrirCupom(const INTPTR ecfHandle);